<resources>
    <string name="rc_yesterday_format">昨天</string>
    <string name="rc_year_format">年</string>
    <string name="rc_month_format">月</string>
    <string name="rc_day_format">日</string>
    <string name="rc_monday_format">周一</string>
    <string name="rc_tuesday_format">周二</string>
    <string name="rc_wednesday_format">周三</string>
    <string name="rc_thuresday_format">周四</string>
    <string name="rc_friday_format">周五</string>
    <string name="rc_saturday_format">周六</string>
    <string name="rc_sunsay_format">周日</string>
    <string name="rc_daybreak_format">凌晨</string>
    <string name="rc_morning_format">上午</string>
    <string name="rc_noon_format">中午</string>
    <string name="rc_afternoon_format">下午</string>
    <string name="rc_night_format">晚上</string>
    <string name="ticket_give_message">
        %1$d 金币已到账\n开始您的阅读之旅吧
    </string>
    <string name="recorder_normal">按住 说话</string>
    <string name="recorder_recording">松开 手指</string>
    <string name="recorder_want_cancel">松开手指，取消发送</string>
    <string name="investigate">请您对本次服务做出评价, 点击对应选项即可完成评价</string>
    <string name="logout">退出</string>
    <string name="topeople">转人工</string>
    <string name="send">发送</string>
    <string name="numbers01">当前咨询人数较多,你排在第</string>
    <string name="number02">位</string>
    <string name="name">姓名</string>
    <string name="writedrown_msg">对方撤回了一条消息</string>
    <string name="titlename">标题</string>
    <string name="content">内容</string>
    <string name="nohelp">没帮助</string>
    <string name="yeshelp">有帮助</string>
    <string name="thinks">多谢鼓励，我们再接再厉</string>
    <string name="close">关闭</string>
    <string name="leavemsg">留言板</string>
    <string name="pleaseleavemsg">请留言~</string>
    <string name="submit_leavemsg">提交留言</string>
    <string name="cancelsend">手指上滑 取消发送</string>
    <string name="good">好评</string>
    <string name="file_name">字段名</string>
    <string name="setting">设置</string>
    <string name="complete">完成</string>
    <string name="now_robit">当前是机器人为你服务</string>
    <string name="other_writing">对方正在输入...</string>
    <string name="people_not_online">当前客服不在线</string>
    <string name="people_now">当前是客服为你服务</string>
    <string name="people_isleave">客服结束了会话</string>
    <string name="chat_img">图库</string>
    <string name="chat_evaluate">评价</string>
    <string name="chat_file">文件</string>
    <string name="warm_prompt">温馨提示</string>
    <string name="doyouneed">客服结束了会话，你想要</string>
    <string name="continuecall">继续咨询</string>
    <string name="back">返回</string>
    <string name="doyouneedother">你的专属座席不在线，是否需要其它座席服务</string>
    <string name="need">需要</string>
    <string name="noneed">不需要</string>
    <string name="topeoplesucceed">转人工服务成功</string>
    <string name="sendfiletoobig">上传文件不能大于20MB</string>
    <string name="seiveceforyou">为您服务</string>
    <string name="receivepeopleaction">接收到人工干预</string>
    <string name="iknow">我知道了</string>
    <string name="thinks_01">多谢鼓励，我们再接再厉！</string>
    <string name="thinks_02">感谢反馈，我们继续努力。</string>
    <string name="url_failure">链接不正确！</string>
    <string name="haddownload">已下载</string>
    <string name="downloading">下载中...</string>
    <string name="sended">已发送</string>
    <string name="notpermession">权限不足，即将退出！</string>
    <string name="notnetwork">当前没有网络连接</string>
    <string name="sorryconfigurationiswrong">对不起，由于在线咨询配置错误，暂时无法进行咨询...</string>
    <string name="sdkinitwrong">客服初始化失败</string>
    <string name="reading">加载中...</string>
    <string name="category_all">全部</string>
    <string name="ongoing">连载中</string>
    <string name="finished">已完结</string>
    <string name="category_male">男频</string>
    <string name="category_female">女频</string>
    <string name="add_collection">+收藏</string>
    <string name="start_read">开始阅读</string>
    <string name="brightness_auto">系统</string>
    <string name="pre_chapter">上一章</string>
    <string name="catalog">目录</string>
    <string name="collection">收藏</string>
    <string name="next_chapter">下一章</string>
    <string name="add_cs_wechat">添加客服小姐姐微信</string>
    <string name="capture_to_scan">可截屏二维码微信中识别</string>
    <string name="custom_qq_text">小姐姐24小时客服QQ号码：</string>
    <string name="custom_qq">2503793729</string>
    <string name="text_desc_custom">若未能及时回复,可能小姐姐繁忙或正在休息 \n小姐姐会逐一答复所有的用户反馈请您耐心等待喔</string>
    <string name="please_login">请登录</string>
    <string name="skip">跳过</string>
    <string name="hint_phone">请输入手机号码</string>
    <string name="hint_user">请输入账户号</string>
    <string name="user">用户</string>
    <string name="password">密码</string>
    <string name="password_orig">旧密码</string>
    <string name="password_new">新密码</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_origpassword">请输入旧密码</string>
    <string name="hint_resetpassword">请输入新密码</string>
    <string name="input">输入</string>
    <string name="exchange">兑换</string>
    <string name="confirm_reset">确认送出</string>
    <string name="login">登录</string>
    <string name="label_user_balance">账户余额:</string>
    <string name="label_recharge_coin">充值金币:</string>
    <string name="label_bonus_time">时间</string>
    <string name="label_bonus_coin">金币</string>
    <string name="choose_recharge_item">请选择充值金额</string>
    <string name="recharge_now">立即充值</string>
    <string name="hint_password_again">请再次输入密码</string>
    <string name="register">注册</string>
    <string name="clear_cache">清除缓存</string>
    <string name="push_message">推送消息</string>
    <string name="find_new_version">发现新版本</string>
    <string name="update_now">立即更新</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="contine_read">继续阅读</string>
    <string name="book_recommend">精彩好书推荐</string>
    <string name="empty_shelf">你还没有收藏记录~</string>
    <string name="explore_book">去找几本看看</string>
    <string name="user_id">用户ID:%1d</string>
    <string name="balance">金币余额</string>
    <string name="vip">VIP</string>
    <string name="not_vip">无</string>
    <string name="my_account">我的账户</string>
    <string name="bind_phone">绑定手机</string>
    <string name="bind_phone_now">立即绑定</string>
    <string name="reading_history">阅读历史</string>
    <string name="bill_detail">账单明细</string>
    <string name="custom_service_lady">客服小姐姐</string>
    <string name="custom_service_mail">客服邮箱</string>
    <string name="input_recommend_id">输入ID分享码</string>
    <string name="my_exchange">输入兑换码</string>
    <string name="my_bonus">我的返利金</string>
    <string name="get_contact">求骚扰</string>
    <string name="switch_account">切换用户</string>
    <string name="find_lost_account">找回用户</string>
    <string name="buy_chapter">购买付费章节</string>
    <string name="chapter_num">第%s章</string>
    <string name="free">免费</string>
    <string name="see_more">查看更多</string>
    <string name="chapter_list">章节列表</string>
    <string name="sort_asc">正序</string>
    <string name="chapter_count">%1$d个章节</string>
    <string name="pay_success">支付成功</string>
    <string name="done">完成</string>
    <string name="guess_like">猜你喜欢</string>
    <string name="hint_search">书名/作者/关键字</string>
    <string name="go_register">已有帐号，去登录</string>
    <string name="contine_read_short">续看</string>
    <string name="hot_research">热门搜索</string>
    <string name="shift_books">换一批</string>
    <string name="comic_description">作品简介:</string>
    <string name="label_author">作者:</string>
    <string name="search_record">搜索记录</string>
    <string name="key_word">关键字</string>
    <string name="more">更多</string>
    <string name="recharge">充值</string>
    <string name="bulletin">公告</string>
    <string name="bulletin_detail">公告详情</string>
    <string name="ranking">排行</string>
    <string name="category">分类</string>
    <string name="book_finish">本书已完结</string>
    <string name="find_book">查找书籍</string>
    <string name="has_account_go_login">已有帐号，去登陆</string>
    <string name="most_watch">大家都在看</string>
    <string name="coin_num">%1d金币</string>
    <string name="msg_no_net">您的网络抛锚了，请检查网络设置</string>
    <string name="reload">重新加载</string>
    <string name="refresh">刷新</string>
    <string name="error_data_error">书籍出错了，请重新加载~</string>
    <string name="error_empty">暂时没有内容~</string>
    <string name="coins_minus">-%1d金币</string>
    <string name="book_chapter_name">《%1$s》 %2$s</string>
    <string name="chapter_range">%1$d - %2$d章</string>
    <string name="vip_free">VIP免费</string>
    <string name="limit_free">限免</string>
    <string name="unlocked">已解锁</string>
    <string name="author_with_label">作者：%1$s</string>
    <string name="sort_desc">倒序</string>
    <string name="chapter_price">%1d金币</string>
    <string name="last_read_position_with_label">上次读到：%1$s</string>
    <string name="guest">游客</string>
    <string name="has_bind_phone">已绑定</string>
    <string name="coins_num">%1d金币</string>
    <string name="title_recharge">充值</string>
    <string name="price_money">%1$.2f元</string>
    <string name="yout_account_click_login">您的账号为%1$s，点击去登录</string>
    <string name="has_login_find_account">已登录找回的账号</string>
    <string name="err_msg_no_net">请检查网络连接是否正常</string>
    <string name="tab_history">阅读记录</string>
    <string name="tab_home">首页</string>
    <string name="tab_mine">我的</string>
    <string name="position_editor_choice">精品荟萃</string>
    <string name="position_week_trending">人气推荐</string>
    <string name="collected">已收藏</string>
    <string name="collect">收藏</string>
    <string name="title_ranking">排行</string>
    <string name="this_book_finished">本书已完结</string>
    <string name="author_is_writting">作者正在努力创作中。。。</string>
    <string name="tab_shelf">书架</string>
    <string name="tap_again_to_exit">再点一次退出程序</string>
    <string name="something_went_wrong">出错啦</string>
    <string name="dialog_notice">提示</string>
    <string name="dialog_confirm_del">确认删除？</string>
    <string name="daily_signin_success">签到成功</string>
    <string name="confirm_remove_book_from_shelf">从书架中移除《%1$s》</string>
    <string name="reload_pay_status">重新查询充值结果</string>
    <string name="pay_result">支付结果</string>
    <string name="pay_failed">支付失败</string>
    <string name="search">搜索</string>
    <string name="pay_history">消费记录</string>
    <string name="customer_service">客服</string>
    <string name="description_vip_365">365元|相当于每天不到1元，享受全部漫画免费阅读</string>
    <string name="vip_name_365">包年会员</string>
    <string name="no_next_chapter">已经是最后一话了</string>
    <string name="no_prev_chapter">已经是第一话了</string>
    <string name="msg_no_history">您还没有阅读记录</string>
    <string name="register_success">注册成功</string>
    <string name="password_diffrent">两次输入的密码不一样</string>
    <string name="position_latelay_update">新书推荐</string>
    <string name="position_most_popular">人气推荐</string>
    <string name="position_new_release">最新上架</string>
    <string name="position_finished_ranking">完结榜</string>
    <string name="position_male_ranking">男生榜</string>
    <string name="position_female_ranking">女生榜</string>
    <string name="dialog_continue_last_read">上次阅读到《%1$s》%2$s,是否继续阅读？</string>
    <string name="position_week_top10">猜你喜欢</string>
    <string name="daily_first_login_reward">今日首次登陆，系统送您%1$d个金币~</string>
    <string name="daily_recommend">今日精品内容推荐</string>
    <string name="choose_pay_way">请选择您的支付方式</string>
    <string name="pay_way_wechat">微信支付</string>
    <string name="hint_pay">温馨提示：软件已经官方授权，保护支付环境，保障财产安全，请放心使用</string>
    <string name="guest_login">游客登录</string>
    <string name="pay_way_alipay">支付宝</string>
    <string name="today_welfare">今日福利</string>
    <string name="wx_number">公众号:</string>
    <string name="empty_string"></string>
    <string name="wx_cstitle">漫画客服</string>
    <string name="csmail">fcw8686@163.com</string>
    <string name="cs_assist">如果需要协助请联系漫画QQ客服:2906143767</string>
    <string name="cstitle2">{有问题, 找客服}</string>
    <string name="serialize">连载</string>
    <string name="fin">完结</string>
    <string name="rank">排名</string>
    <string name="jpncomic">出版日漫</string>
    <string name="promotions">优惠活动</string>
</resources>