<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/all_black"
    android:orientation="horizontal"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">


    <TextView
        android:layout_weight="1"
        android:id="@+id/rank"
        android:layout_marginLeft="12dp"
        style="@style/shop.category.new"
        android:text="@string/serialize" />

    <TextView
        android:layout_weight="1"
        android:id="@+id/fin"
        android:layout_marginLeft="12dp"
        style="@style/shop.category.new"
        android:text="@string/fin" />

    <TextView
        android:layout_weight="1"
        android:id="@+id/ranking"
        android:layout_marginLeft="12dp"
        style="@style/shop.category.new"
        android:text="@string/rank" />

    <TextView
        android:layout_weight="1"
        android:id="@+id/jpncomic"
        android:layout_marginLeft="12dp"
        style="@style/shop.category.new"
        android:text="@string/jpncomic" />

    <TextView
        android:layout_weight="1"
        android:layout_marginLeft="12dp"
        android:id="@+id/recharge"
        style="@style/shop.category.new"
        android:text="@string/promotions" />


    <TextView
        android:layout_weight="1"
        android:layout_marginLeft="12dp"
        android:id="@+id/cateFree"
        style="@style/shop.category.new"
        android:text="@string/free" />


</LinearLayout>