<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:paddingLeft="15dp"
              android:paddingRight="15dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/chapter_list"
                android:textColor="#ff333333"
                android:textSize="13sp"
                android:drawableLeft="@mipmap/ic_catalog_novel_detail"
                android:drawablePadding="12dp"
                />

        <TextView
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_btn_sort"
                android:drawableLeft="@mipmap/ic_sort_dl"
                android:textColor="#ff2190ff"
                android:gravity="center"
                android:id="@+id/sort"
                android:text="@string/sort_asc"/>
    </LinearLayout>

    <View style="@style/common_divider"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/finished"
                android:id="@+id/status_detail"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chapter_count"
                android:textColor="#ff999999"
                android:textSize="13sp"
                android:id="@+id/total"
                />
    </LinearLayout>
</LinearLayout>