<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true">

    <RelativeLayout
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/please_login"
                android:maxWidth="200dp"
                android:visibility="gone"
                android:singleLine="true"
                android:textColor="@color/main_text"
                android:textSize="17sp"/>

        <ImageView
                android:visibility="visible"
                android:id="@+id/titleBack_reset"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/fanhui_bbb"
                android:drawablePadding="6dp"
                android:padding="10dp"
                />

        <TextView
                android:visibility="invisible"
                android:id="@+id/title_right_but"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/skip"
                android:textColor="@color/main_text"
                android:textSize="15sp"/>
    </RelativeLayout>

    <ImageView
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:src="@mipmap/logo_dingxiang"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="20dp">

        <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@mipmap/ic_login_user"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="16dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#f44336"
                    android:text="@string/user"/>

            <com.aliee.quei.mo.widget.view.ETextWithDelete
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    app:delSrc="@mipmap/ic_edit_del_1"
                    android:inputType="number"
                    android:maxLength="11"
                    android:hint="@string/hint_user"
                    android:id="@+id/editPhone_reset"
                    android:background="@drawable/bg_edit_login"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@mipmap/ic_login_pwd"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#f44336"
                android:text="@string/password_orig"/>

            <com.aliee.quei.mo.widget.view.ETextWithDelete
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                app:delSrc="@mipmap/ic_edit_del_1"
                android:inputType="textPassword"
                android:hint="@string/hint_origpassword"
                android:id="@+id/password1_orig"
                android:background="@drawable/bg_edit_login"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="20dp">

        <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@mipmap/ic_login_pwd"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="16dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="#f44336"
                    android:text="@string/password_new"/>

            <com.aliee.quei.mo.widget.view.ETextWithDelete
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    app:delSrc="@mipmap/ic_edit_del_1"
                    android:inputType="textPassword"
                    android:hint="@string/hint_resetpassword"
                    android:id="@+id/password1_reset"
                    android:background="@drawable/bg_edit_login"/>
        </LinearLayout>
    </LinearLayout>


    <TextView
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_btn_login2"
            android:gravity="center"
            android:textColor="@color/text_color_selector_white_btn"
            android:text="@string/confirm_reset"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="33dp"
            android:textSize="18sp"
            android:enabled="false"
            android:id="@+id/btnReset"/>

    <TextView
        android:padding="10dp"
        android:text="如不确定旧密码请洽客服"
        android:layout_marginTop="10dp"
        android:textColor="#ff4436"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        />

    <TextView
            android:visibility="gone"
            android:padding="10dp"
            android:id="@+id/tvGuest"
            android:text="@string/guest_login"
            android:textColor="#999"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
</LinearLayout>
