<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:maxWidth="200dp"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/please_login"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/titleBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:drawablePadding="6dp"
            android:padding="10dp"
            android:src="@mipmap/fanhui_bbb"
            android:visibility="visible" />

        <TextView
            android:id="@+id/title_right_but"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg_login">

        <TextView
            android:id="@+id/tv_Login_bonus"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginLeft="39dp"
            android:layout_marginTop="110dp"
            android:layout_marginRight="43dp"
            android:text="注册会员送 150金币"
            android:textColor="@color/text_color_selector_white_btn"
            android:textSize="18sp" />


        <LinearLayout
            android:id="@+id/layout_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="90dp"
            android:layout_marginRight="50dp"
            android:layout_below="@+id/tv_Login_bonus"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/empty_string"
                android:src="@mipmap/ic_login_user" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:textColor="#f44336"
                    android:textSize="14sp"
                    android:visibility="gone"/>

                <com.aliee.quei.mo.widget.view.ETextWithDelete xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/editPhone"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/bg_edit_login"
                    android:hint="@string/hint_phone"
                    android:paddingLeft="12dp"
                    android:inputType="number"
                    android:maxLength="11"
                    app:delSrc="@mipmap/ic_edit_del_1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_Pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_below="@+id/layout_Phone"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@mipmap/ic_login_pwd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="#f44336"
                    android:textSize="14sp"
                    android:visibility="gone"/>

                <com.aliee.quei.mo.widget.view.ETextWithDelete xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/password1"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/bg_edit_login"
                    android:paddingLeft="12dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    app:delSrc="@mipmap/ic_edit_del_1" />
            </LinearLayout>
        </LinearLayout>

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/bg_btn_login2"
        android:layout_below="@+id/layout_Pwd"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/text_color_selector_white_btn"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/goRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btnLogin"
        android:padding="10dp"
        android:text="没有账号？点击注册"
        android:textColor="#999" />

    <TextView
        android:id="@+id/goReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/goRegister"
        android:padding="10dp"
        android:text="有账号!修改密码"
        android:textColor="#999"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/guest_login"
        android:textColor="#999"
        android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>
