<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <ImageView android:layout_width="200dp" android:layout_height="200dp"
               android:layout_marginTop="30dp"
    android:id="@+id/imgStatus"
    android:src="@mipmap/img_no_data"
    android:layout_gravity="center_horizontal"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:textSize="16sp"
              android:textColor="@color/theme_color"
    android:text="@string/book_finish"
    android:id="@+id/textStatus"/>
    <TextView android:layout_width="match_parent" android:layout_height="42dp"
    android:background="@drawable/bg_btn_recharge"
              android:layout_marginLeft="40dp"
              android:layout_marginRight="40dp"
    android:textColor="@color/white"
    android:text="@string/find_book"
    android:gravity="center"
    android:layout_marginTop="30dp"
    android:id="@+id/findBook"/>

    <View android:layout_width="match_parent" android:layout_height="10dp"
    android:background="@color/colorDivider"
    android:layout_marginTop="30dp"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="42dp"
                  android:gravity="center_vertical"
                  android:paddingLeft="15dp"
                  android:paddingRight="15dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guess_like"
                android:textColor="#ff333333"
                android:textSize="13sp"
                android:drawableLeft="@mipmap/ic_header_tab"
                android:drawablePadding="5dp"
        />
    </LinearLayout>
</LinearLayout>